add endpoint for fetching bounds by zip
